Updated the DSL.

--- a/case_studies/cat_sitting/cat_sitting.conf
+++ b/case_studies/cat_sitting/cat_sitting.conf
@@ -4,11 +4,11 @@ add_requirements filename=requirements.smv
 # single unit group
 unit_group name=CAT_SITTING divisions=3 failing_division=2
 
-input name=WIDTH  divisions=3 nusmv_type=0..1000
-input name=HEIGHT divisions=3 nusmv_type=0..1000
-input name=DEPTH  divisions=3 nusmv_type=0..1000
+input in=CAT_SITTING name=WIDTH  nusmv_type=0..1000
+input in=CAT_SITTING name=HEIGHT nusmv_type=0..1000
+input in=CAT_SITTING name=DEPTH  nusmv_type=0..1000
 
-output name=CAN_SIT divisions=3
+output in=CAT_SITTING name=CAN_SIT
 
 unit in=CAT_SITTING name=APU filename=apu.smv nusmv_module_name=SITTING_APU max_delay=${DELAY_APU} nusmv_outputs=CAN_SIT:boolean single_division_to_retain=NA
 unit in=CAT_SITTING name=ALU filename=alu.smv nusmv_module_name=SITTING_ALU max_delay=${DELAY_ALU} nusmv_outputs=CAN_SIT:boolean single_division_to_retain=1
